--- a/lang/es-ar.json
+++ b/lang/es-ar.json
@@ -245,6 +245,7 @@
         "InvalidResponse": "Los datos recibidos no son válidos.",
         "IP": "IP",
         "JsTrackingTag": "Código de rastreo JavaScript",
+        "KpiMetric": "Métrica KPI",
         "Language": "Idioma",
         "Languages": "Idiomas",
         "LastDays": "Últimos %s días (incluyendo hoy)",
@@ -367,7 +368,7 @@
         "Remove": "Quitar",
         "Report": "Informe",
         "ReportGeneratedFrom": "Este informe fue generado usando datos de %s.",
-        "ReportRatioTooltip": "\"%1$s\" representa %2$s de %3$s %4$s con %5$s.",
+        "ReportRatioTooltip": "\"%1$s\" representa %2$s de %3$s %4$s en segmento %5$s con %6$s.",
         "Reports": "Informes",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "El archivo informa casi cada X segundos",
         "RearchiveTimeIntervalOnlyForTodayReports": "Esto sólo afecta informes de hoy (o cualquier otro rango de fechas, incluyendo hoy)",
@@ -415,7 +416,7 @@
         "ToDeleteAllFilesRunThisCommand": "Para eliminar todos estos archivos de una, podés ejecutar este comando:",
         "Total": "Total",
         "Totals": "Totales",
-        "TotalRatioTooltip": "Esto es %1$s de todo %2$s %3$s.",
+        "TotalRatioTooltip": "Esto es %1$s de todo %2$s %3$s en %4$s.",
         "TotalRevenue": "Ingresos totales",
         "TotalVisitsPageviewsActionsRevenue": "(Total: %1$s visitas, %2$s vistas de páginas, %3$s acciones, %4$s ingresos)",
         "TrackingScopeAction": "Acción",
@@ -493,9 +494,20 @@
         "YouAreViewingDemoMessage": "Estás viendo la demo de %1$sMatomo%2$s",
         "YouMustBeLoggedIn": "Tenés que iniciar sesión para acceder a esta función.",
         "YourChangesHaveBeenSaved": "Cambios guardados.",
+        "YourSessionHasExpired": "Debido a inactividad, venció tu sesión. Por favor, volvé a iniciar sesión para continuar.",
         "ThankYouForUsingMatomo": "Gracias por usar Matomo",
         "TheMatomoTeam": "El equipo de Matomo",
-        "PleaseTryAgain": "Por favor, intentá de nuevo"
+        "PleaseTryAgain": "Por favor, intentá de nuevo",
+        "ComparisonRatioTooltip": "Esto es un cambio %1$s comparado al segmento \"%2$s\" en %3$s.",
+        "ComparisonCardTooltip1": "\"%1$s\" en %2$s contiene %3$s de todas las visitas (%4$s de %5$s en total).",
+        "ComparisonCardTooltip2": "Esta cuenta de visita es diferente en %1$s comparada a %2$s sobre %3$s.",
+        "VisualizationDoesNotSupportComparison": "Esta visualización no soporta comparación de segmento\/período.",
+        "ChangeInX": "Cambio en %1$s",
+        "Comparisons": "Comparaciones",
+        "ClickToRemoveComp": "Hacé clic para quitar esta comparación.",
+        "MaximumNumberOfSegmentsComparedIs": "El número máximo de segmentos que pueden ser comparados simultáneamente es %s.",
+        "CompareDatesParamMustMatchComparePeriods": "%1$s la longitud del parámetro de consulta debe coincidir %2$s longitud de parámetro de consulta.",
+        "MaximumNumberOfPeriodsComparedIs": "El número máximo de períodos que pueden ser comparados simultáneamente es %s."
     },
     "Mobile": {
         "AboutPiwikMobile": "Acerca de Matomo Mobile",
