--- a/lang/it.json
+++ b/lang/it.json
@@ -245,6 +245,7 @@
         "InvalidResponse": "I dati ricevuti non sono validi.",
         "IP": "IP",
         "JsTrackingTag": "Codice JavaScript",
+        "KpiMetric": "Metrica KPI",
         "Language": "Lingua",
         "Languages": "Lingue",
         "LastDays": "Ultimi %s giorni (incluso oggi)",
@@ -367,7 +368,6 @@
         "Remove": "Rimuovi",
         "Report": "Report",
         "ReportGeneratedFrom": "Questo report è stato generato utilizzando dati da %s.",
-        "ReportRatioTooltip": "'%1$s' rappresenta %2$s di %3$s %4$s con %5$s.",
         "Reports": "Report",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Archivia i report al massimo ogni X secondi",
         "RearchiveTimeIntervalOnlyForTodayReports": "Questo influisce solo sui report per oggi (o per ogni intervallo di date che comprenda oggi)",
@@ -415,7 +415,6 @@
         "ToDeleteAllFilesRunThisCommand": "Per eliminare tutti questi file in una volta, puoi eseguire questo comando:",
         "Total": "Totale",
         "Totals": "Totali",
-        "TotalRatioTooltip": "Questo è %1$s di tuttti i %2$s %3$s.",
         "TotalRevenue": "Totale guadagni",
         "TotalVisitsPageviewsActionsRevenue": "(Totale: %1$s visite, %2$s pagine viste, %3$s azioni, %4$s entrate)",
         "TrackingScopeAction": "Azione",
