--- a/lang/nl.json
+++ b/lang/nl.json
@@ -245,6 +245,7 @@
         "InvalidResponse": "De ontvangen gegevens zijn ongeldig.",
         "IP": "IP",
         "JsTrackingTag": "Javascript Tracking Code",
+        "KpiMetric": "KPI Waarde",
         "Language": "Taal",
         "Languages": "Talen",
         "LastDays": "Laatste %s dagen (inclusief vandaag)",
@@ -367,7 +368,6 @@
         "Remove": "Verwijderen",
         "Report": "Rapport",
         "ReportGeneratedFrom": "Dit rapport was gegenereerd met gegevens van %s.",
-        "ReportRatioTooltip": "'%1$s' representeert %2$s van %3$s %4$s met %5$s.",
         "Reports": "Rapporten",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Archiveer rapporten maximaal elke x seconden",
         "RearchiveTimeIntervalOnlyForTodayReports": "Dit beïnvloedt enkel rapporten voor vandaag (of elk ander datumbereik die vandaag bevat)",
@@ -415,7 +415,6 @@
         "ToDeleteAllFilesRunThisCommand": "Om al deze bestanden in een keer te verwijderen, kunt u dit commando uitvoeren:",
         "Total": "Totaal",
         "Totals": "Totalen",
-        "TotalRatioTooltip": "Dit is %1$s van alle %2$s %3$s.",
         "TotalRevenue": "Totale inkomsten",
         "TotalVisitsPageviewsActionsRevenue": "(Totaal: %1$s bezoeken, %2$s paginaweergaven, %3$s acties, %4$s inkomsten)",
         "TrackingScopeAction": "Actie",
