--- a/lang/sq.json
+++ b/lang/sq.json
@@ -245,6 +245,7 @@
         "InvalidResponse": "Të dhënat e marra janë të pavlefshme.",
         "IP": "IP",
         "JsTrackingTag": "Kod Ndjekjeje JavaScript",
+        "KpiMetric": "Matje KPI",
         "Language": "Gjuhë",
         "Languages": "Gjuhë",
         "LastDays": "%s ditët e fundit (përfshirë të sotmen)",
@@ -367,7 +368,7 @@
         "Remove": "Hiqe",
         "Report": "Raport",
         "ReportGeneratedFrom": "Ky raport u prodhua duke përdorur të dhëna nga %s.",
-        "ReportRatioTooltip": "'%1$s' përfaqëson %2$s e %3$s %4$s me %5$s.",
+        "ReportRatioTooltip": "'%1$s' përfaqëson %2$s e %3$s %4$s në segmentin %5$s me %6$s.",
         "Reports": "Raporte",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Raportet për ditën e sotme (ose për çfarëdo Intervali Datash që përfshin ditën e sotme) do të përpunohen e shumta çdo",
         "RearchiveTimeIntervalOnlyForTodayReports": "Kjo prek vetëm raportet për sot (ose çfarëdo Interval Datash që përfshin të sotmen)",
@@ -415,7 +416,7 @@
         "ToDeleteAllFilesRunThisCommand": "Që të fshini krejt kartelat njëherësh, mund të përdorni këtë urdhër:",
         "Total": "Gjithsej",
         "Totals": "Gjithsej",
-        "TotalRatioTooltip": "Kjo është %1$s e krejt %2$s %3$s.",
+        "TotalRatioTooltip": "Kjo është %1$s e krejt %2$s %3$s në %4$s.",
         "TotalRevenue": "Të ardhura Gjithsej",
         "TotalVisitsPageviewsActionsRevenue": "(Gjithsej: %1$s vizita, %2$s parje faqesh, %3$s veprime, %4$s të ardhura)",
         "TrackingScopeAction": "Veprim",
@@ -493,9 +494,20 @@
         "YouAreViewingDemoMessage": "Po shihni demonstrimin e %1$sMatomo%2$s",
         "YouMustBeLoggedIn": "Që të përdorni këtë funksion, duhet të keni bërë hyrjen.",
         "YourChangesHaveBeenSaved": "Ndryshimet tuaja u ruajtën.",
+        "YourSessionHasExpired": "Sesioni juaj ka skaduar për shkak plogështie. Që të vazhdohet, ju lutemi, bëni hyrjen.",
         "ThankYouForUsingMatomo": "Faleminderit që përdorni Matomo-n",
         "TheMatomoTeam": "Ekipi i Matomo-s",
-        "PleaseTryAgain": "Ju lutemi, riprovoni"
+        "PleaseTryAgain": "Ju lutemi, riprovoni",
+        "ComparisonRatioTooltip": "Ky është %1$s ndryshim krahasuar me segmentin '%2$s' në %3$s.",
+        "ComparisonCardTooltip1": "'%1$s' në %2$s përmban %3$s të krejt vizitave (%4$s nga %5$s gjithsej).",
+        "ComparisonCardTooltip2": "Numri i vizitave është i ndryshëm me %1$s krahasyar me %2$s gjatë %3$s.",
+        "VisualizationDoesNotSupportComparison": "Ky vizualizim nuk mbulon krahasime përgjatë segmentesh\/periudhash.",
+        "ChangeInX": "Ndryshim në %1$s",
+        "Comparisons": "Krahasime",
+        "ClickToRemoveComp": "Klikoni që të hiqet ky krahasim.",
+        "MaximumNumberOfSegmentsComparedIs": "Numri maksimum i segmenteve që mund të krahasohen në të njëjtën kohë është %s.",
+        "CompareDatesParamMustMatchComparePeriods": "Gjatësia e parametrit të kërkesës %1$s duhet të përputhet me gjatësinë e parametrit të kërkesës %2$s.",
+        "MaximumNumberOfPeriodsComparedIs": "Numri maksimum i periudhave që mund të krahasohen në të njëjtën kohë është %s."
     },
     "Mobile": {
         "AboutPiwikMobile": "Rreth Matomo-s për Celular",
