--- a/lang/tr.json
+++ b/lang/tr.json
@@ -245,6 +245,7 @@
         "InvalidResponse": "Alınan veriler geçersiz.",
         "IP": "IP",
         "JsTrackingTag": "JavaScript İzleme Kodu",
+        "KpiMetric": "Anahtar Performans Ölçütü",
         "Language": "Dil",
         "Languages": "Diller",
         "LastDays": "Son %s gün (bugün dahil)",
@@ -367,7 +368,7 @@
         "Remove": "Sil",
         "Report": "Rapor",
         "ReportGeneratedFrom": "Bu rapor %s verileri kullanılarak oluşturuldu.",
-        "ReportRatioTooltip": "'%1$s' temsili %2$s\/ %3$s %4$s %5$s ile.",
+        "ReportRatioTooltip": "'%1$s' temsili %2$s \/ %3$s %4$s %5$s diliminde %6$s ile.",
         "Reports": "Raporlar",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Raporlar her X saniyede arşivlensin",
         "RearchiveTimeIntervalOnlyForTodayReports": "Bu işlem yalnız bugünün raporlarını etkiler (ya da bugünü kapsayan tüm Tarih Aralıklarını)",
@@ -415,7 +416,7 @@
         "ToDeleteAllFilesRunThisCommand": "Tüm bu dosyaları bir kerede silmek için şu komutu kullanabilirsiniz:",
         "Total": "Toplam",
         "Totals": "Toplamlar",
-        "TotalRatioTooltip": "%1$s \/ %2$s %3$s.",
+        "TotalRatioTooltip": "Bu %1$s \/ %2$s %3$s tamamı %4$s içinde.",
         "TotalRevenue": "Toplam Gelir",
         "TotalVisitsPageviewsActionsRevenue": "(Toplam: %1$s ziyaretçi, %2$s sayfa görüntüleme, %3$s işlem, %4$s gelir)",
         "TrackingScopeAction": "İşlem",
@@ -493,9 +494,20 @@
         "YouAreViewingDemoMessage": "%1$sMatomo%2$s tanıtımına bakıyorsunuz",
         "YouMustBeLoggedIn": "Bu özelliği kullanabilmek için oturumu açmalısınız.",
         "YourChangesHaveBeenSaved": "Değişiklikleriniz kaydedildi.",
+        "YourSessionHasExpired": "Bir süredir işlem yapmadığınızdan oturumunuz kapatıldı. Lütfen devam etmek için oturum açın.",
         "ThankYouForUsingMatomo": "Matomo kullandığınız için teşekkürler",
         "TheMatomoTeam": "Matomo Ekibi",
-        "PleaseTryAgain": "Lütfen yeniden deneyin"
+        "PleaseTryAgain": "Lütfen yeniden deneyin",
+        "ComparisonRatioTooltip": "%3$s üzerindeki '%2$s' dilimine göre %1$s değişiklikliği var.",
+        "ComparisonCardTooltip1": "%2$s üzerindeki '%1$s' içinde tüm ziyaretlerin %3$s kadarı bulunuyor (toplam %4$s \/ %5$s).",
+        "ComparisonCardTooltip2": "Ziyaret sayısı %2$s ile %3$s karşılaştırıldığında %1$s kadar farklı.",
+        "VisualizationDoesNotSupportComparison": "Görselleştirmede dilim\/aralık karşılaştırması yapılamaz.",
+        "ChangeInX": "%1$s içindeki değişim",
+        "Comparisons": "Karşılaştırmalar",
+        "ClickToRemoveComp": "Bu karşılaştırmayı silmek için tıklayın.",
+        "MaximumNumberOfSegmentsComparedIs": "Aynı anda en fazla %s dilim karşılaştırılabilir.",
+        "CompareDatesParamMustMatchComparePeriods": "%1$s sorgu parametresinin uzunluğu %2$s sorgu parametresinin uzunluğuna uygun olmalıdır.",
+        "MaximumNumberOfPeriodsComparedIs": "Aynı anda en fazla %s aralık karşılaştırılabilir."
     },
     "Mobile": {
         "AboutPiwikMobile": "Matomo Mobil Hakkında",
