--- a/plugins/CoreHome/lang/nl.json
+++ b/plugins/CoreHome/lang/nl.json
@@ -26,6 +26,10 @@
         "ExcludeRowsWithLowPopulation": "Alle rijen worden getoond %s Verberg de rijen met een lage populatie",
         "ExternalHelp": "Help (opent in een nieuw tabblad)",
         "FlattenDataTable": "De rapportweergave is hierarchisch %s Maak het vlak",
+        "FormatMetrics": "Waarden opmaken",
+        "ShowExportUrl": "Toon Export URL",
+        "HideExportUrl": "Verberg Export URL",
+        "HomeShortcut": "Home",
         "HowMuchIsPiwikWorth": "Hoeveel is Matomo u waard?",
         "IncludeRowsWithLowPopulation": "Rijen met een lage populatie zijn verborgen %s Laat alle rijen zien",
         "InjectedHostEmailBody": "Hallo, ik probeerde Matomo vandaag te benaderen, en kreeg de onbekende hostnaam waarschuwing.",
@@ -47,6 +51,8 @@
         "ReportGeneratedXAgo": "Rapport %s geleden gegenereerd",
         "SharePiwikShort": "Matomo! Gratis en open source web analyse. Beheer je data.",
         "ShareThis": "Deel dit",
+        "ShortcutsAvailable": "Beschikbare snelkoppelingen",
+        "ShortcutZenMode": "voor Zen mode",
         "ShowJSCode": "toon de javascript code",
         "SkipToContent": "Ga naar de inhoud",
         "SubscribeAndBecomePiwikSupporter": "Ga verder naar een veilige kredietkaart betaalpagina (Paypal) en wordt een Matomo Supporter!",
