--- a/plugins/PrivacyManager/lang/es-ar.json
+++ b/plugins/PrivacyManager/lang/es-ar.json
@@ -20,25 +20,25 @@
         "DoNotTrack_Enabled": "Actualmente estás respetando la privacidad de tus visitantes, ¡Bravo!",
         "DoNotTrack_SupportDNTPreference": "Soporte de Do Not Track",
         "EstimatedDBSizeAfterPurge": "Tamaño estimado de la base de datos después de la purga",
-        "EstimatedSpaceSaved": "Espacio estimado guardado",
-        "GeolocationAnonymizeIpNote": "Nota: Geolocalización tendrá aproximadamente los mismos resultados con 1 byte anónimo. Con 2 bytes o más, Geolocalización será imprecisa.",
+        "EstimatedSpaceSaved": "Espacio ahorrado estimado",
+        "GeolocationAnonymizeIpNote": "Nota: la geolocalización tendrá aproximadamente los mismos resultados con 1 byte anónimo. Con 2 bytes o más, la geolocalización será imprecisa.",
         "GetPurgeEstimate": "Obtener estimación de purga",
         "KeepBasicMetrics": "Mantener métricas básicas (visitantes, vistas de páginas, tasa de rebote, conversiones de meta, conversiones de comercio electrónico, etc.)",
-        "KeepReportSegments": "Para mantener la información superior, también mantenga informes segmentados",
+        "KeepReportSegments": "Para mantener la información superior, también mantené informes segmentados",
         "LastDelete": "La última eliminación fue en",
-        "LeastDaysInput": "Por favor, especifique un número de días más grande que %s.",
-        "LeastMonthsInput": "Por favor, especifique un número de meses mayor que %s.",
+        "LeastDaysInput": "Por favor, especificá un número de días mayor que %s.",
+        "LeastMonthsInput": "Por favor, especificá un número de meses mayor que %s.",
         "MenuPrivacySettings": "Privacidad",
         "NextDelete": "La próxima eliminación programada es en",
-        "PurgeNow": "Purgar DB ahora",
-        "PurgeNowConfirm": "Está a punto de borrar información permanentemente de su base de datos. Está seguro que quiere continuar?",
-        "PurgingData": "Purgando información...",
+        "PurgeNow": "Purgar base de datos ahora",
+        "PurgeNowConfirm": "Estás a punto de eliminar datos permanentemente de tu base de datos. ¿Estás seguro que querés continuar?",
+        "PurgingData": "Purgando datos…",
         "ReportsDataSavedEstimate": "Tamaño de la base de datos",
-        "SaveSettingsBeforePurge": "Ha cambiado la configuración de borrado de información. Por favor, guárdelas antes de iniciar la purga.",
-        "SeeAlsoOurOfficialGuidePrivacy": "See also our official guide: %1$sWeb Analytics Privacy%2$s",
-        "TeaserHeadline": "Configuración de Privacidad",
-        "UseAnonymizedIpForVisitEnrichment": "Also use the Anonymized IP addresses when enriching visits.",
-        "UseAnonymizeIp": "Hacer anónimas las direcciones IP de los visitantes",
-        "UseDeleteReports": "Regularmente borre los reportes antiguos de la base de datos"
+        "SaveSettingsBeforePurge": "Cambiaste la configuración de eliminación de datos. Por favor, guardalas antes de iniciar la purga.",
+        "SeeAlsoOurOfficialGuidePrivacy": "También lee nuestra guía oficial: %1$sPrivacidad de los análisis web%2$s",
+        "TeaserHeadline": "Configuración de privacidad",
+        "UseAnonymizedIpForVisitEnrichment": "También usá las direcciones IP anonimizadas al enriquecer visitas.",
+        "UseAnonymizeIp": "Anonimizar las direcciones IP de los visitantes",
+        "UseDeleteReports": "Eliminar los informes antiguos de la base de datos regularmente"
     }
 }
