--- a/lang/de.json
+++ b/lang/de.json
@@ -368,7 +368,7 @@
         "Remove": "Entfernen",
         "Report": "Bericht",
         "ReportGeneratedFrom": "Dieser Bericht nutzt Daten von %s.",
-        "ReportRatioTooltip": "'%1$s' repräsentiert %2$s von %3$s %4$s mit %5$s.",
+        "ReportRatioTooltip": "'%1$s' repräsentiert %2$s von %3$s %4$s im Segment %5$s mit %6$s.",
         "Reports": "Berichte",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "Archiviere Berichte mindestens alle X Sekunden",
         "RearchiveTimeIntervalOnlyForTodayReports": "Dies betrifft nur Berichte für heute (sowie jeden anderen Zeitraum, der den heutigen Tag beinhalten)",
@@ -416,7 +416,7 @@
         "ToDeleteAllFilesRunThisCommand": "Um alle diese Dateien auf einmal zu löschen, kannst du folgenden Befehl ausführen:",
         "Total": "Gesamt",
         "Totals": "Gesamtsummen",
-        "TotalRatioTooltip": "Das entspricht %1$s von %2$s %3$s.",
+        "TotalRatioTooltip": "Dies ist %1$s von allen %2$s %3$s in %4$s.",
         "TotalRevenue": "Gesamteinnahmen",
         "TotalVisitsPageviewsActionsRevenue": "(Gesamt: %1$s Besuche, %2$s Seitenansichten, %3$s Aktionen, %4$s Einnahmen)",
         "TrackingScopeAction": "Aktion",
@@ -494,9 +494,20 @@
         "YouAreViewingDemoMessage": "Sie sehen gerade die Demo von %1$sMatomo%2$s",
         "YouMustBeLoggedIn": "Sie müssen angemeldet sein, um diese Funktion nutzen zu können.",
         "YourChangesHaveBeenSaved": "Ihre Änderungen wurden gespeichert.",
+        "YourSessionHasExpired": "Ihre Sitzung ist aufgrund Inaktivität abgelaufen. Bitte melden Sie sich an um fortzufahren.",
         "ThankYouForUsingMatomo": "Danke, dass Sie Matomo benutzen",
         "TheMatomoTeam": "Das Matomo Team",
-        "PleaseTryAgain": "Bitte versuchen Sie es erneut"
+        "PleaseTryAgain": "Bitte versuchen Sie es erneut",
+        "ComparisonRatioTooltip": "Dies ist eine %1$s Änderung verglichen mit dem '%2$s' Segment auf %3$s.",
+        "ComparisonCardTooltip1": "'%1$s' auf %2$s beinhaltet %3$s aller Besuche (%4$s von %5$s insgesamt).",
+        "ComparisonCardTooltip2": "Die Besucheranzahl ist um %1$s verschieden verglichen mit %2$s über %3$s.",
+        "VisualizationDoesNotSupportComparison": "Diese Ansicht unterstützt nicht den Vergleich von Segmenten\/Zeiträumen.",
+        "ChangeInX": "Änderungen in %1$s",
+        "Comparisons": "Vergleiche",
+        "ClickToRemoveComp": "Klicken Sie um diesen Vergleich zu entfernen",
+        "MaximumNumberOfSegmentsComparedIs": "Die maximale Anzahl von Segmenten die gleichzeitig verglichen werden können ist %s.",
+        "CompareDatesParamMustMatchComparePeriods": "%1$s Abfrageparameterlänge muss mit der %2$s Abfrageparameterlänge übereinstimmen.",
+        "MaximumNumberOfPeriodsComparedIs": "Die maximale Anzahl von Zeiträumen die gleichzeitig verglichen werden können ist %s."
     },
     "Mobile": {
         "AboutPiwikMobile": "Über Matomo Mobile",
