--- a/plugins/CoreAdminHome/lang/es-ar.json
+++ b/plugins/CoreAdminHome/lang/es-ar.json
@@ -133,6 +133,8 @@
         "ConfirmDeleteThisTrackingFailure": "¿Estás seguro que querés eliminar esta falla de rastreo?",
         "TrackingFailuresEmailSubject": "Fallas de rastreo en tu cuenta de Matomo Analytics",
         "TrackingFailuresEmail1": "Esto es sólo para hacerte saber que %s diferentes tipos de fallos de rastreo han ocurrido en los últimos días.",
-        "TrackingFailuresEmail2": "Para ver todas las solicitudes de rastreo que fallaron, %1$shacé clic acá%2$s."
+        "TrackingFailuresEmail2": "Para ver todas las solicitudes de rastreo que fallaron, %1$shacé clic acá%2$s.",
+        "ImportFromGoogleAnalytics": "Importar desde Google Analytics",
+        "ImportFromGoogleAnalyticsDescription": "Si tenés datos existentes en Google Analytics y te estás cambiando a Matomo, podés exportar esos datos usando el plugin %1$sGoogleAnalyticsImporter%2$s."
     }
 }
