--- a/plugins/SegmentEditor/lang/pt-br.json
+++ b/plugins/SegmentEditor/lang/pt-br.json
@@ -52,6 +52,7 @@
         "CustomUnprocessedSegmentApiError5": "Por favor, note que você pode testar se o seu segmento irá funcionar, sem ter que esperar que ele seja processado, usando o método Live.getLastVisitsDetails da API.",
         "CustomUnprocessedSegmentApiError6": "Ao usar este método da API, você verá quais usuários e ações coincidiram com o seu parâmetro &segment=.",
         "CustomUnprocessedSegmentNoData": "Para ver dados para este segmento, você deve criar este segmento manualmente no Editor de Segmento, então esperar algumas horas para que o pré-processamento finalize.",
-        "AddThisToMatomo": "Adicionar este segmento ao Matomo"
+        "AddThisToMatomo": "Adicionar este segmento ao Matomo",
+        "Test": "Teste"
     }
 }
