--- a/plugins/SegmentEditor/lang/pt.json
+++ b/plugins/SegmentEditor/lang/pt.json
@@ -51,6 +51,7 @@
         "CustomUnprocessedSegmentApiError5": "Por favor, note que, pode testar se o seu segmento vai funcionar sem ter de aguardar que o mesmo seja processado, utilizando a API Live.getLastVisitsDetails.",
         "CustomUnprocessedSegmentApiError6": "Quando utiliza este método da API, irá ver que utilizadores e ações coincidiram com o seu parâmetro &segment=.",
         "CustomUnprocessedSegmentNoData": "Para ver dados para este segmento, deve criar este segmento manualmente no editor de segmentos, depois aguardar algumas horas até o pré-processamento terminar.",
-        "AddThisToMatomo": "Adicionar este segmento ao Matomo"
+        "AddThisToMatomo": "Adicionar este segmento ao Matomo",
+        "Test": "Teste"
     }
 }
