--- a/plugins/Tour/lang/nl.json
+++ b/plugins/Tour/lang/nl.json
@@ -18,7 +18,13 @@
         "SelectDateRange": "Selecteer een periode",
         "SelectDateRangeDescription": "Selecteer een periode in de kalender.",
         "ChangeVisualisation": "Wijzig een visualisatie",
+        "ChangeVisualisationDescription": "Bekijk een rapport en selecteer de visualisatie icoon onderaan het rapport om het rapport in een andere visualisatie te bekijken.",
         "FlattenActions": "Maak een pagina rapport vlak",
+        "FlattenActionsDescription": "Ga naar Gedrag => Pagina's en klik onderaan het rapport op het tandwiel pictogram om het rapport vlak te maken. Een vlak rapport verandert de hiërarchie van een gegroepeerd rapport in een lijst.",
+        "ViewRowEvolutionDescription": "Rij evolutie toont je de huidige & verleden statistiek gegevens voor elke rij in elk rapport.",
+        "ViewVisitsLogDescription": "Het bezoekers logboek toont je alle individuele bezoeken en acties welke elke bezoeker op je website heeft uitgevoerd.",
+        "ViewVisitorProfileDescription": "Het bezoekers logboek helpt je het individuele gedrag van je bezoekers te begrijpen door de bezoeken van je bezoekers samen te vatten en te vermelden.",
+        "ShareAllChallengesCompleted": "Net ontgrendeld de %1$s prestatie door alle Matomo uitdagingen te voltooien.",
         "ChallengeCompleted": "Gefeliciteerd, je hebt deze uitdaging voltooid.",
         "BecomeMatomoExpert": "Wordt een Matomo Expert",
         "YouCanCallYourselfExpert": "Je kunt jezelf nu een echte %1$s Matomo Expert %2$s noemen.",
@@ -34,7 +40,9 @@
         "MatomoExpert": "Matomo Expert",
         "ConfigureGeolocation": "Configureer geolocatie",
         "CustomiseDashboard": "Pas een dashboard aan",
+        "CustomiseDashboardDescription": "Je kunt nieuwe widgets toevoegen aan je Dashboard om ervoor te zorgen dat het rapporteert over al je belangrijkste statistieken.",
         "DefineGoal": "Voeg een doel toe",
+        "DefineGoalDescription": "Conversies bijhouden is een geweldige manier om vast te stellen of je de huidige zakelijke doelstellingen haalt, nieuwe doelen te identificeren, je prestaties te bekijken en te analyseren en te leren hoe je conversies, conversiepercentages en inkomsten per bezoek kunt verhogen.",
         "EmbedTrackingCode": "Integreer trackingcode",
         "CompletionTitle": "Goed gedaan!",
         "CompletionMessage": "Je hebt alle uitdagingen voltooid. Geef jezelf een schouderklop.",
