Allow user to set noreply email address and name on Settings page

--- a/lang/en.json
+++ b/lang/en.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 visit",
         "OnlyEnterIfRequired": "Only enter a username if your SMTP server requires it.",
         "OnlyEnterIfRequiredPassword": "Only enter a password if your SMTP server requires it.",
+        "UsuallyYourEmailAddress": "Usually your email address",
+        "NameShownInTheSenderColumn": "The name shown in the sender column",
         "OnlyUsedIfUserPwdIsSet": "Only used if a username\/password is set, ask your provider if you are unsure which method to use.",
         "OpenSourceWebAnalytics": "free\/libre analytics platform",
         "OperationAtLeast": "At least",
@@ -402,6 +404,8 @@
         "SmtpPort": "SMTP Port",
         "SmtpServerAddress": "SMTP server address",
         "SmtpUsername": "SMTP username",
+        "SmtpFromName": "SMTP from name",
+        "SmtpFromAddress": "SMTP from address",
         "Source": "Source",
         "StatisticsAreNotRecorded": "Matomo Visitor Tracking is currently disabled! Re-enable tracking by setting record_statistics = 1 in your config\/config.ini.php file.",
         "Subtotal": "Subtotal",
