--- a/lang/en.json
+++ b/lang/en.json
@@ -304,7 +304,7 @@
         "OneVisit": "1 visit",
         "OnlyEnterIfRequired": "Only enter a username if your SMTP server requires it.",
         "OnlyEnterIfRequiredPassword": "Only enter a password if your SMTP server requires it.",
-        "SmtpFromEmailHelp": "The default value is noreply@%1$s.<br>If sending mails doesn't work for you, you might need to set this address to match your SMTP username.",
+        "SmtpFromEmailHelp": "The default value is noreply@{DOMAIN}, where {DOMAIN} will be replaced with your Matomo domain \"%1$s\".<br>If sending mails doesn't work for you, you might need to set this address to match your SMTP username.",
         "NameShownInTheSenderColumn": "The name shown in the sender column",
         "OnlyUsedIfUserPwdIsSet": "Only used if a username\/password is set, ask your provider if you are unsure which method to use.",
         "OpenSourceWebAnalytics": "free\/libre analytics platform",
