validate from address and make sure to set it to default if none is provided

--- a/plugins/CoreAdminHome/lang/en.json
+++ b/plugins/CoreAdminHome/lang/en.json
@@ -4,6 +4,7 @@
         "Administration": "Administration",
         "ArchivingSettings": "Archiving settings",
         "BrandingSettings": "Branding settings",
+        "ErrorEmailFromAddressNotValid": "The SMTP from address is not valid",
         "ReleaseChannel": "Release channel",
         "ClickHereToOptIn": "Click here to opt in.",
         "ClickHereToOptOut": "Click here to opt out.",
