--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -85,6 +85,21 @@
         "ShowInEmbeddedWidgets": "Show in embedded widgets",
         "ShowInEmbeddedWidgetsDescription": "If checked, a link to your Privacy Policy and your Terms & Conditions will be displayed at the bottom of embedded widgets.",
         "PrivacyPolicy": "Privacy Policy",
-        "TermsAndConditions": "Terms & Conditions"
+        "TermsAndConditions": "Terms & Conditions",
+		
+		"ConsentMeans": "Consent means offering individuals choice and control about how their personal data is processed.",
+		"WhenINeedConsent": "When do I need to ask for user consent?",
+		"WhenINeedConsentNote1": "In the context of the GDPR privacy regulations, when you are processing personal data, in some cases you will need to ask for your users' consent. To identify whether you need to ask for consent, you need to determine whether your lawful basis for processing personal data is "Consent" or "Legitimate interest", or whether you can avoid collecting personal data altogether. We recommend to learn more about the lawful basis under the GDPR for Matomo.",
+		"WhenINeedConsentNote2": "Note that when you require to have your users' consents and if you cannot prove that you got the "Consent" of your users in the past, then we recommend to",
+		"HowToAskConsent": "How do I ask users for consent?",
+		"HowToAskConsentNote1": "Follow the steps below to ask your user for their consents before their data is processed within Matomo.",
+		"ConsentStep1Title": "Step 1: require consent",
+		"ConsentStep1Note1": "To require consent, insert the following line at top of your existing Matomo Tracking code on all your pages:",
+		"ConsentStep1Note2": "Once this function ‘requireConsent' is executed then no tracking request will be sent to Matomo. Note that some",
+		"ConsentStep1Link": "tracking cookies",
+		"ConsentStep1Note3": "will be set during this page view but will be deleted as soon as the user navigates to a different page or closes the browser.",
+		
+		
+		
     }
 }
